gestion de erreurs lors de l'authentification
